--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,29 +1,61 @@
 <!doctype html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="{{ '/static/style.css'|url }}">
-<title>{% block title %}Welcome{% endblock %} — YummyCake</title>
+
+<head>
+    <meta charset="utf-8">
+    <!--css -->
+    <link rel="stylesheet" href="{{ '/static/css/bootstrap.min.css'|url }}">
+    <link rel="stylesheet" href="{{ '/static/css/resume.min.css'|url }}">
+    <link rel="stylesheet" href="{{ '/static/css/font-awesome.min.css'|url }}">
+    <!-- FancyBox JS-->
+    <link rel="stylesheet" href="{{ '/static/fancybox/jquery.fancybox.css'|url }}">
+    <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <!-- js -->
+    <!-- Bootstrap core JavaScript -->
+    <script src="{{ '/static/js/jquery.min.js'|url }}"></script>
+    <script src="{{ '/static/js/bootstrap.bundle.min.js'|url }}"></script>
+    <!-- FancyBox JS-->
+    <script src="{{ '/static/fancybox/jquery.fancybox.pack.js'|url }}"></script>
+
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $("a.fancyimage").fancybox();
+        });
+    </script>
+    <!-- Plugin JavaScript -->
+    <script src="{{ '/static/js/jquery.easing.min.js'|url }}"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="{{ '/static/js/resume.min.js'|url }}"></script>
+    <title>{% block title %}Welcome{% endblock %} — YummyCakes</title>
+</head>
+
 <body>
-  <header>
-    <h1>YummyCake</h1>
-    <nav>
-      <ul class="nav navbar-nav">
-        <li{% if this._path == '/' %} class="active"{% endif
-          %}><a href="{{ '/'|url }}">Welcome</a></li>
-        {% for href, title in [
-          ['/blog', 'Blog'],
-          ['/projects', 'Projects'],
-          ['/about', 'About']
-        ] %}
-          <li{% if this.is_child_of(href) %} class="active"{% endif
-            %}><a href="{{ href|url }}">{{ title }}</a></li>
-        {% endfor %}
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+        <a href="{{ '/'|url }}" class="navbar-brand js-scroll-trigger"> <span class="d-block d-lg-none">YummyCakes</span>
+        <span class="d-none d-lg-block">
+          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="top" src="{{ '/static/images/cooker-img.png'|url }}" alt="">
+           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" id="button" src="{{ '/static/images/logo.jpg'|url }}" alt="">
+        </span></a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+
+                {% for href, title in [['/blog', 'Блог'], ['/projects', 'Галерея'], ['/skills', 'Навыки'], ['/about', 'Обо мне'] ] %}
+                <li class="nav-item" {% if this.is_child_of(href) %} {% endif %}><a class="nav-link js-scroll-trigger" href="{{ href|url }}">{{ title }}</a></li>
+                {% endfor %}
+            </ul>
+        </div>
     </nav>
-  </header>
-  <div class="page">
-    {% block body %}{% endblock %}
-  </div>
-  <footer>
-    &copy; Copyright 2017 by Крутская Валентина.
-  </footer>
+    <div class="container-fluid p-0">
+        <section class="resume-section p-3 p-lg-5 d-flex d-column">
+            <div class="my-auto thumb">
+                <!--{% include 'footer.html' %} -->
+                {% block body %}{% endblock %}
+            </div>
+        </section>
+    </div>
 </body>
