--- a/templates/project.html
+++ b/templates/project.html
@@ -1,8 +1,11 @@
-{% extends "layout.html" %}
-{% block title %}{{ this.title }}{% endblock %}
-{% block body %}
-  <h3>{{ this.title }}</h3>
-  {{ this.body }}
+{% extends "layout.html" %} {% block title %}{{ this.name }} ({{ this.date.year }}){% endblock %} {% block body %}
+<h3>{{ this.name }}</h3>
+<dl>
+    <dt>Дата
+    <dd>{{ this.date|dateformat }}
+</dl>
+  <h4>Описание</h4>
+  <div>{{ this.description }}</div>
   {% set images = this.attachments.images.all() %}
   {% if images %}
             {% for image in images %}
